Use convenient wither enabling preview features in main space